--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     width: 480px;
+    height: 480px;
     display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
-}
-
-.gridItem {
-    width: 30px;
-    height: 30px;
-    border: 1px solid red;
-    box-sizing: border-box;
 }
