--- a/style.css
+++ b/style.css
@@ -3,10 +3,19 @@
     padding: 0;
 }
 
+body {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
+    display: flex;
     width: 480px;
     height: 480px;
-    display: flex;
     flex-wrap: wrap;
     flex-shrink: 0;
+    border: 1px solid gray;
 }
