--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 body {
@@ -9,6 +10,30 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.header {
+    margin-bottom: 4px;
+}
+
+.header, .footer {
+    display: flex;
+    width: 100vw;
+    padding: 16px;
+    justify-content: center;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+}
+
+.wrapper {
+    width: 100%;
+    flex: 1;
+    background: rgb(255, 254, 246);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
