--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -18,7 +18,7 @@ body {
 
 .header, .footer {
     display: flex;
-    width: 100vw;
+    width: 100%;
     padding: 16px;
     justify-content: center;
     font-size: 20px;
@@ -27,9 +27,10 @@ body {
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 }
 
-.wrapper {
-    width: 100%;
+.content-wrapper {
     flex: 1;
+    min-width: 100%;
+    min-height: 100%;
     background: rgb(248, 248, 244);
     display: flex;
     justify-content: center;
@@ -37,14 +38,15 @@ body {
     gap: 32px;
 }
 
-.container {
+.grid-container {
     display: flex;
-    width: 700px;
-    height: 700px;
+    width: 600px;
+    height: 600px;
     flex-wrap: wrap;
     flex-shrink: 0;
     background: white;
     box-shadow: 10px 20x 10px rgb(213, 213, 213);
+    margin: 8px 0;
 }
 
 .config-buttons {
@@ -53,11 +55,11 @@ body {
     gap: 16px;
 }
 
-.config-buttons button:hover {
+.config-buttons btn:hover {
     background: #f0f0f0;
   }
 
-.config-buttons button {
+.btn {
     background-color: white;
     cursor: pointer;
     border: 1px solid rgba(192, 192, 192, 1);
@@ -65,7 +67,7 @@ body {
     padding: 16px;
 }
 
-.config-buttons .active {
+.btn.active {
     background: rgba(255, 255, 216, 1);
     border: 1px solid rgba(255, 200, 0, 1);
     color: rgba(255, 200, 0, 1)
